tests/sksl/errors/ReservedNameDvec3.glsl
### Compilation failed:

error: 1: 'dvec3' is a reserved word
int dvec3;
    ^^^^^
1 error
